<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/deepBlack"
            android:textSize="18sp"
            android:text="@string/title"/>

        <Button
            android:id="@+id/spotifyStreamer"
            android:layout_width="@dimen/buttonWidth190dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:padding="@dimen/margin_10"
            android:background="@color/orange"
            android:text="@string/spotify_streamer"
            android:textColor="@color/deepBlack"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/scoreApp"
            android:layout_width="@dimen/buttonWidth190dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:padding="@dimen/margin_10"
            android:background="@color/orange"
            android:text="@string/scores_app"
            android:textColor="@color/deepBlack"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/libraryApp"
            android:layout_width="@dimen/buttonWidth190dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:padding="@dimen/margin_10"
            android:background="@color/orange"
            android:text="@string/library_app"
            android:textColor="@color/deepBlack"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/buildItBigger"
            android:layout_width="@dimen/buttonWidth190dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:padding="@dimen/margin_10"
            android:background="@color/orange"
            android:text="@string/build_it_bigger"
            android:textColor="@color/deepBlack"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/xyzReader"
            android:layout_width="@dimen/buttonWidth190dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:padding="@dimen/margin_10"
            android:background="@color/orange"
            android:text="@string/xyz_reader"
            android:textColor="@color/deepBlack"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/capstone"
            android:layout_width="@dimen/buttonWidth190dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:padding="@dimen/margin_10"
            android:background="@color/material_deep_orange_500"
            android:text="@string/capstone_my_own_app"
            android:textColor="@color/material_white"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>
